tests/ui/compile-fail-1.stderr
error[E0499]: cannot borrow `items` as mutable more than once at a time
  --> $DIR/compile-fail-1.rs:17:18
   |
16 |     let first = items.read_next();
   |                 ----- first mutable borrow occurs here
17 |     let second = items.read_next();
   |                  ^^^^^
   |                  |
   |                  second mutable borrow occurs here
   |                  first borrow later used here
